# python-pciid

./: .gitignore  LICENSE  README.md  hatch_build.py  pyproject.toml  run_tests.sh
.github/workflows/: tests.yml
pciid/: __init__.py  api.py  cli_lspci.py  sysfs.py  topology.py  types.py
pciid/backends/: __init__.py  bindb.py  discovery.py  textdb.py
pciid/data/: .gitignore  __init__.py
scripts/: lspci_parse.py  pciids_bin_to_text.py  pciids_text_to_bin.py  update_pciids.py
tests/: conftest.py  test_bindb.py  test_bindb_corrupt.py  test_cli.py  test_discovery.py  test_sysfs_topology.py  test_textdb.py  test_weird_topology.py
wip/: caps.py
